tests/errors/drop-maybe-unavailable-owner.ari
fn maybe_drop(condition: bool) -> i64 {
  let token: own i64 = 5;
  while condition {
    drop token;
    break;
  }
  drop token;
  return 0;
}

fn main() -> i64 {
  return maybe_drop(false);
}
